Work in progress

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body>
     <div class="reveal">
       <div class="slides">
-	<section data-markdown="presentation.md">
+	<section data-markdown="presentation.md"
+		 data-separator-vertical="vvv\n">
 	</section>
       </div>
     </div>
@@ -31,7 +32,7 @@
       // - https://revealjs.com/config/
       Reveal.initialize({
 	  hash: true,
-	  transition: 'fade',
+	  transition: 'slide',
 	  theme: 'extendas',
 	  preloadIframes: true,
 
