Implement animation for first slide

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
     <script src="plugin/highlight/highlight.js"></script>
+    <script src="plugin/zoom/zoom.js"></script>
     <script>
       // More info about initialization & config:
       // - https://revealjs.com/initialization/
@@ -35,9 +36,9 @@
 	  transition: 'slide',
 	  theme: 'extendas',
 	  preloadIframes: true,
-
+	  progress: true,
 	  // Learn about plugins: https://revealjs.com/plugins/
-	  plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+	  plugins: [ RevealZoom, RevealMarkdown, RevealHighlight, RevealNotes ]
       });
     </script>
   </body>
